ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csv-tool-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csv-tool-service
                port:
                  number: 80
